<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ticketDetailsLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<include layout="@layout/actionbar" />
	
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" >
    </TextView>

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status" >
    </TextView>

    <TextView
        android:id="@+id/txtHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours" >
    </TextView>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" >
    </TextView>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartClicked"
        android:text="@string/start" >
    </Button>

    <ListView
        android:id="@+id/taskListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>