<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/ticket_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                android:id="@+id/ticket_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/priority" />

            <TextView
                android:id="@+id/ticket_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/hours" />

            <TextView
                android:id="@+id/ticket_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/ticket_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/description" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnStart"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:gravity="left|center_vertical"
            android:hapticFeedbackEnabled="true"
            android:text="@string/start" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:drawableLeft="@android:drawable/ic_media_pause"
            android:gravity="left|center_vertical"
            android:hapticFeedbackEnabled="true"
            android:text="@string/stop"
            android:visibility="gone" />
        
        
    </LinearLayout>

</LinearLayout>